600-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: keycloak
  name: keycloak
  labels:
    app: keycloak

spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: sleighzy/keycloak:16.1.0-arm64
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
            - name: https
              containerPort: 8443
          ## volume mounts required when using H2 database
          # volumeMounts:
          #   - name: keycloak-data
          #     mountPath: /opt/jboss/keycloak/standalone/data
