500-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: keycloak

spec:
  ports:
    - protocol: TCP
      name: http
      port: 8080
    - protocol: TCP
      name: https
      port: 8443
  selector:
    app: keycloak
